# ecganalyse

./: .gitignore  README.md  pyproject.toml  requirements.txt  train_ecg_transcovnet.py
.claude/plans/: zany-nibbling-pnueli.md
config/: model_config.yaml  rules_config.yaml  settings.py  training_config.yaml
data/samples/: PT1234_2024-01.h5  PT5678_2024-02.h5  PT8972_2026-02.h5  PT9401_2026-02.h5
data/test_conditions/: afib_120_medium.h5  aflutter_100_medium.h5  avblock1_70_medium.h5  avblock2t1_55_medium.h5  lbbb_75_medium.h5  normal_sinus_75_medium.h5  pvc_80_medium.h5  rbbb_75_medium.h5  sinus_brady_45_medium.h5  sinus_tachy_130_medium.h5  ste_90_medium.h5  svt_180_medium.h5  vtach_150_medium.h5
data/test_nsr/: NSR_100bpm.h5  NSR_60bpm.h5  NSR_80bpm.h5
data/test_nsr_noisy/: NSR_100bpm_high.h5  NSR_100bpm_low.h5  NSR_100bpm_medium.h5  NSR_60bpm_high.h5  NSR_60bpm_low.h5  NSR_60bpm_medium.h5  NSR_80bpm_high.h5  NSR_80bpm_low.h5  NSR_80bpm_medium.h5
memory/: MEMORY.md
openspec/: project.md
scripts/: cli_phase0.py  cli_phase1.py  cli_phase2.py  cli_phase3.py  cli_phase4.py  ecg_simulator_cli.py  evaluate.py  generate_conditions_test_set.py  generate_nsr_noisy_test_set.py  generate_nsr_test_set.py  generate_realistic_data.py  generate_sample_hdf5.py  improved_ecg_generator.py  run_inference.py  test_pipeline.py  train.py  visualize_phase4.py  visualize_realistic_data.py
src/data/: dataset.py  event_parser.py  hdf5_loader.py  vitals_parser.py
src/ecg_system/: exceptions.py  schemas.py
src/encoding/: foundation.py  fusion.py  swin.py  (+2 more)
tests/: conftest.py
(+74 files in other folders)
